# reversi-solver

./: Cargo.toml  README.md
src/: board.rs  lib.rs  main.rs  solve.rs
tests/: lib.rs
tests/resources/: games.txt
