[package]
name = "reversi-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
indexmap = "2.0.0"
owo-colors = "3.5.0"
rand = "0.8.5"
regex = "1.8.4"

[profile.release]
lto = "fat"
